# SOC-LED-FW-SW

./: .cz.toml  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  my-mailmap  package.json  partitions.csv  sdkconfig.defaults
doc/: SWDesign.md
main/: CMakeLists.txt  MN8App.cpp  MN8App.h  eth_main.c  idf_component.yml  led_strip_example_main.c  main.cpp  notes  overall design  pin_def.h  rev.h
main/App/: IotHeartbeat.cpp  IotHeartbeat.h  MN8App.cpp  MN8App.h  MN8Context.cpp  MN8Context.h  MN8StateMachine.cpp  MN8StateMachine.h  mdns_broadcaster.cpp  mdns_broadcaster.h  udp_server.cpp  udp_server.h  web_server.cpp  web_server.h
main/App/Configuration/: ChargePointConfig.cpp  ChargePointConfig.h  SiteConfig.cpp  SiteConfig.h  ThingConfig.cpp  ThingConfig.h
main/App/MqttAgent/: IotThing.cpp  IotThing.h  MqttAgent.cpp  MqttAgent.h  MqttConfig.h  MqttConnection.cpp  MqttConnection.h  MqttContext.cpp  MqttContext.h
main/App/NetworkAgent/: NetworkConnection.cpp  NetworkConnection.h  NetworkConnectionAgent.cpp  NetworkConnectionAgent.h  NetworkConnectionStateMachine.cpp  NetworkConnectionStateMachine.h
main/IOT/: ThingConfig.cpp  ThingConfig.h
main/LED/: Led.h  LedTask.cpp  LedTask.h  LedTaskSpi.cpp  LedTaskSpi.h  RmtOverSpi.cpp  RmtOverSpi.h
main/LED/Animations/: BaseAnimation.h  BasePulseCurve.h  ChargeIndicator.cpp  ChargeIndicator.h  ChargingAnimation.cpp  ChargingAnimation.h  ChargingAnimationWhiteBubble.cpp  ChargingAnimationWhiteBubble.h  ChasingAnimation.cpp  ChasingAnimation.h  ProgressAnimation.cpp  ProgressAnimation.h  PulsingAnimation.cpp  PulsingAnimation.h  SmoothRatePulseCurve.cpp  SmoothRatePulseCurve.h  StaticAnimation.cpp  StaticAnimation.h
main/Network/: Connection.cpp  Connection.h  EthConfiguration.cpp  EthConfiguration.h  EthConnection.cpp  EthConnection.h  NetworkConfiguration.cpp  NetworkConfiguration.h  NetworkInterface.cpp  NetworkInterface.h  WifiConfiguration.cpp  WifiConfiguration.h  WifiConnection.cpp  WifiConnection.h
main/Network/Configuration/: EthConfiguration.h  NetworkConfiguration.cpp  NetworkConfiguration.h
main/Network/Connection/: Connection.cpp  Connection.h  EthConnection.cpp  EthConnection.h  WifiConnection.cpp  WifiConnection.h
main/Network/MQTT/: MqttAgent.cpp  MqttAgent.h  demo_config.h  mqtt_demo_mutual_auth.c  notes.md
main/Network/Utils/: ethernet_init.cpp  ethernet_init.h
main/ReplConsole/: cmd_chargepoint.cpp  cmd_chargepoint.h  cmd_factory_reset.cpp  cmd_factory_reset.h  cmd_ifconfig.cpp  cmd_ifconfig.h  cmd_info.cpp  cmd_info.h  cmd_iot.cpp  cmd_iot.h  cmd_led.cpp  cmd_led.h  cmd_ping.cpp  cmd_ping.h  cmd_provision_charge_point_info.cpp  cmd_provision_charge_point_info.h  cmd_provision_iot.cpp  cmd_provision_iot.h  cmd_reboot.cpp  cmd_reboot.h  cmd_tasks.cpp  cmd_tasks.h  cmd_wifi.cpp  cmd_wifi.h  notes  repl_console.cpp  repl_console.h
main/ReplConsole/Utils/: iot.cpp  iot.h
main/Utils/: Colors.cpp  Colors.h  FreeRTOSTask.cpp  FreeRTOSTask.h  FuseMacAddress.cpp  FuseMacAddress.h  HSV2RGB.cpp  HSV2RGB.h  KeyStore.cpp  KeyStore.h  NoCopy.h  Singleton.h  Time.h  Updater.cpp  Updater.h  iot_provisioning.cpp
main/gtest/: CMakeLists.txt  README.txt  tests.cpp
main/gtest/mock/: esp_log.h
main/gtest/mock/freertos/: FreeRTOS.h
utils/: make_build_zip.sh
